--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 		<link rel="stylesheet" type="text/css" href="css/foundation.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script type="text/javascript" src="js/vendor/jquery.js"></script>
-		<script type="text/javascript" src="js/foundation.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+		<script type="text/javascript" src="js/lib/vendor/jquery.js"></script>
+		<script type="text/javascript" src="js/lib/foundation.min.js"></script>
+		<script src="js/lib/skrollr/skrollr.min.js"></script>
+		<script src="js/lib/skrollr/skrollr.menu.min.js"></script>
+		<script src="js/main.js"></script>
 	</head>
 	<body>
 		<div class="nav bar">
