--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 			<div class="background-girl">
 			</div>
 			<div class="text">
-				<img src="">
-				<h1 class="tittle">DIENTES BLANCOS AL <span>INSTANTE.</span></h1>
-				<img src="">
+				<img src="./img/logo-colgate.png" class="logo-luminous">
+				<h1 class="tittle-1">DIENTES BLANCOS<br> AL <span>INSTANTE.</span></h1>
+				<img src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br><span>Visita regularmente a tu odontólogo.</span></p>
-				<img src="">
+				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
 <!--  ++++++++++++  DECIDIR NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
@@ -37,10 +37,10 @@
 			</div>
 			<div class="text">
 				<img src="">
-				<h1 class="tittle">DECIDIR NO ES <span>INSTANTÁNEO,<br> BLANQUEAR</span>TU SONRISA SÍ.</h1>
-				<img src="">
+				<h1>DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
+				<img src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
-				<img src="">
+				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
 <!--  ++++++++++++  ESCOGER NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
@@ -49,39 +49,39 @@
 			</div>
 			<div class="text">
 				<img src="">
-				<h1 class="tittle">ESCOGER NO ES <span>INSTANTÁNEO,<br> BLANQUEAR</span>TU SONRISA SÍ.</h1>
-				<img src="">
+				<h1>ESCOGER NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
+				<img src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
-				<img src="">
+				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
 <!--  ++++++++++++  CON ILUMINADORES ÓPTICOS -->
 		<div class="container Iluminadores">
 			<div class="background-rojo">
-				<img src="">
-				<p>DRAMATIZACIÓN</p>
+				<img src="./img/diente-con-relog.png" class="diente">
+				<p class="drama">DRAMATIZACIÓN</p>
 			</div>
 			<div class="text">
 				<img src="">
-				<h1 class="tittle">CON ILUMINADORES<br>ÓPTICOS.</h1>
-				<img src="">
-				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
-				<img src="">
+				<h1 class="opticos">CON ILUMINADORES<br>ÓPTICOS.</h1>
+				<img src="./img/pasta.png" class="pasta">
+				<p class="leyenda">El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
+				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>	
 <!--  ++++++++++++  CON ILUMINADORES ÓPTICOS DIENTES BLANCOS AL INSTANTE -->
 		<div class="container 3min">
 			<div class="background-rojo">
-				<img src="">
-				<p>DRAMATIZACIÓN</p>
-				<img src="">
+				<img src="./img/diente-con-relog-2.png" class="minutos">
+				<p class="drama2">DRAMATIZACIÓN</p>
+				<img src="./img/banner-abajo.png" class="banner">
 			</div>
 			<div class="text">
 				<img src="">
 				<h1 class="tittle">CON ILUMINADORES<br>ÓPTICOS<br>DIENTES BLANCOS<br>AL INSTANTE.</h1>
-				<img src="">
-				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
-				<img src="">
+				<img src="./img/pasta.png" class="pasta">
+				<p class="leyenda">El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
+				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>	
 <!--  ++++++++++++  DECIDIR NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
@@ -90,10 +90,10 @@
 			</div>
 			<div class="text">
 				<img src="">
-				<h1 class="tittle">DECIDIR NO ES <span>INSTANTÁNEO,<br> BLANQUEAR</span>TU SONRISA SÍ.</h1>
-				<img src="">
+				<h1>DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
+				<img src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
-				<img src="">
+				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>	
 <!--  ++++++++++++  LÍNEA COMPLETA, RESULTADOS INCREÍBLES. -->
@@ -101,11 +101,11 @@
 			<div class="background-rojo">
 			</div>
 			<div class="text">
-				<img src="">
-				<h1 class="tittle">LÍNEA COMPLETA,<br>RESULTADOS INCREÍBLES.<br> <span>Con cepillo, enjuague y pasta de dientes juentos,<br>tu sonrisa brillará mucho más.</span></h1>
-				<img src="">
-				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
-				<img src="">
+				<img src="./img/productos.png" class="articulos">
+				<h1 class="tittle">LÍNEA COMPLETA,<br>RESULTADOS INCREÍBLES.<br> <span class="text">Con cepillo, enjuague y pasta de dientes juentos,<br>tu sonrisa brillará mucho más.</span></h1>
+				<img src="./img/pasta.png" class="pasta">
+				<p class="leyenda">El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
+				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
 <!--  ++++++++++++  CREMA DENTAL COLGATE LUMINOUS WHITE -->
@@ -114,11 +114,11 @@
 			</div>
 			<div class="text">
 				<img src="">
-				<h1 class="tittle">CREMA DENTAL<br>COLGATE LUMINOUS WHITE.<br> <span>Dientes un tono más blanco en una semana.<br>Sus microcristales aceleradores de blanqueamiento<br>contiene ingredientes similares a los<br>usados por dentistas.</span></h1>
+				<h1 class="tittle">CREMA DENTAL<br>COLGATE LUMINOUS WHITE.<br> <span class="text">Dientes un tono más blanco en una semana.<br>Sus microcristales aceleradores de blanqueamiento<br>contiene ingredientes similares a los<br>usados por dentistas.</span></h1>
 				<img src="">
 			</div>
 		</div>	
-<!--  ++++++++++++  GENTE LUMINOUS -->
+<!--  ++++++++++++  GENTE LUMINOUS >
 		<div class="container Gente">
 			<div class="row">
 				<div class="col-md-6">
@@ -151,7 +151,7 @@
 				</div>	
 			</div>
 		</div>
-<!--  ++++++++++++  MAGAZINE LUMINOUS -->
+<!--  ++++++++++++  MAGAZINE LUMINOUS >
 		<div class="container Magazine">
 			<div>
 				<div></div>
@@ -176,7 +176,7 @@
 				</ul>
 			</div>	
 		</div>
-<!--  ++++++++++++  ARTÍCULO -->
+<!--  ++++++++++++  ARTÍCULO >
 		<div class="container Articulo">
 			<div class="row">
 				<div class="col-md-6">
