--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
 		</div>
 <!--  ++++++++++++  PAG. INICIO-->
 		<div class="container Inicio">
-			<div class="background-girl">
-			</div>
-			<div class="text">
-				<img src="./img/logo-colgate.png" class="logo-luminous">
-				<h1 class="tittle-1">DIENTES BLANCOS<br> AL <span>INSTANTE.</span></h1>
-				<img src="./img/pasta.png" class="pasta">
-				<p>El efecto blanqueador instantáneo es temporal.<br><span>Visita regularmente a tu odontólogo.</span></p>
-				<img src="./img/boton-flecha-abajo.png" class="boton">
+			<div class="content">
+				<div class="background-girl"></div>
+				<div class="text">
+					<img src="./img/logo-colgate.png" class="logo-luminous">
+					<h1 class="tittle-1">DIENTES BLANCOS<br> AL <span>INSTANTE.</span></h1>
+					<img src="./img/pasta.png" class="pasta">
+					<p>El efecto blanqueador instantáneo es temporal.<br><span>Visita regularmente a tu odontólogo.</span></p>
+					<img src="./img/boton-flecha-abajo.png" class="boton">
+				</div>
 			</div>
 		</div>
 <!--  ++++++++++++  DECIDIR NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
