--- a/index.html
+++ b/index.html
@@ -25,21 +25,18 @@
 		</div>
 <!--  ++++++++++++  PAG. INICIO-->
 		<div class="container Inicio">
-			<div class="content">
-				<div class="background-girl"></div>
-				<div class="text">
-					<img src="./img/logo-colgate.png" class="logo-luminous">
-					<h1 class="tittle-1">DIENTES BLANCOS<br> AL <span>INSTANTE.</span></h1>
-					<img src="./img/pasta.png" class="pasta">
-					<p>El efecto blanqueador instantáneo es temporal.<br><span>Visita regularmente a tu odontólogo.</span></p>
-					<img src="./img/boton-flecha-abajo.png" class="boton">
-				</div>
+			<!--div class="background-girl"></div-->
+			<div class="text">
+				<img src="./img/logo-colgate.png" class="logo-luminous">
+				<h1 class="tittle-1">DIENTES BLANCOS<br> AL <span>INSTANTE.</span></h1>
+				<img src="./img/pasta.png" class="pasta">
+				<p>El efecto blanqueador instantáneo es temporal.<br><span>Visita regularmente a tu odontólogo.</span></p>
+				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
 <!--  ++++++++++++  DECIDIR NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
 		<div class="container Lentes">
-			<div class="background-girl2">
-			</div>
+			<!--div class="background-girl2"></div-->
 			<div class="text">
 				<img src="">
 				<h1>DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
@@ -50,8 +47,7 @@
 		</div>
 <!--  ++++++++++++  ESCOGER NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
 		<div class="container Tacones">
-			<div class="background-girl3">
-			</div>
+			<!--div class="background-girl3"></div-->
 			<div class="text">
 				<img src="">
 				<h1>ESCOGER NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
@@ -75,7 +71,7 @@
 			</div>
 		</div>	
 <!--  ++++++++++++  CON ILUMINADORES ÓPTICOS DIENTES BLANCOS AL INSTANTE -->
-		<div class="container 3min">
+		<div class="container 3min redbg">
 			<div class="background-rojo">
 				<img src="./img/diente-con-relog-2.png" class="minutos">
 				<p class="drama2">DRAMATIZACIÓN</p>
