--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
 				<div class="fondo-2">
 					<img src="./img/marco-2.png" class="foto2">
 					<p class="name2">Alejandra Ramírez</p>
-					<p class="text2">Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio. Tiene sus raices en una pieza cl´sica de la literatura del Latin, que data del año 45 antes de Cristo. </p>
+					<p class="text2">Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio.</p>
 				</div>
 				<div class="fondo-3">
 					<img src="./img/marco-3.png" class="foto3">
 					<p class="name3">Alejandra Ramírez</p>
-					<p class="text3">El trozo de texto estándar de Lorem Ipsum usado desde el año 1500 es reproducido debajo para aquellos interesados. Las secciones 1.10.32 y 1.10.33 de "de Finibus Bonorum et Malorum" </p>
+					<p class="text3">El trozo de texto estándar de Lorem Ipsum usado desde el año 1500 es reproducido debajo para aquellos interesados.</p>
 				</div>
 				</div>
-					<h1 class="tittle-1">GENTE <br>LUMINOUS<br><span class="text">Personas que han decidido cambiar su sonrisa<br> en un instante.</span></h1>
-					<img src="">
+					<h1 class="tittle">GENTE <br>LUMINOUS<br><span class="text">Personas que han decidido cambiar su sonrisa<br> en un instante.</span></h1>
+					<img src="./img/diente.png" class="diente">
 				</div>
 			</div>
 				<!--div class="footer">
