--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/foundation.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<link rel="stylesheet"type="text/css" href="css/slick.css"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 		<script type="text/javascript" src="js/lib/vendor/jquery.js"></script>
 		<script type="text/javascript" src="js/lib/foundation.min.js"></script>
 		<script src="js/lib/skrollr/skrollr.min.js"></script>
 		<script src="js/lib/skrollr/skrollr.menu.min.js"></script>
+		<script type="text/javascript" src="js/slick.min.js"></script>
+		<script type="text/javascript" src="js/lib/foundation/foundation.reveal.js"></script>
 		<script src="js/main.js"></script>
 	</head>
 	<body>
@@ -102,27 +105,55 @@
 			<div class="background-rojo">
 			</div>
 			<div class="text">
-				<img src="./img/productos.png" class="articulos">
-				<h1 class="tittle">LÍNEA COMPLETA,<br>RESULTADOS INCREÍBLES.<br> <span class="text">Con cepillo, enjuague y pasta de dientes juentos,<br>tu sonrisa brillará mucho más.</span></h1>
+				<a href=""><img src="./img/pasta_4.png" class="articulos1"></a>
+				<a href=""><img src="./img/pasta_3.png" class="articulos2"></a>
+				<a href=""><img src="./img/cepillos.png" class="articulos3"></a>
+				<a href=""><img src="./img/enjuage.png" class="articulos4"></a>
+				<h1 class="tittle">LÍNEA COMPLETA,<br>RESULTADOS INCREÍBLES.</h1>
+				<p class="contexto">Con cepillo, enjuague y pasta de dientes juentos,<br>tu sonrisa brillará mucho más.</p>
 				<img src="./img/pasta.png" class="pasta">
 				<p class="leyenda">El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
 				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
-<!--  ++++++++++++  CREMA DENTAL COLGATE LUMINOUS WHITE >
-		<div class="container Crema">
-			<div class="background-rojo">
+<!--  ++++++++++++  CREMA DENTAL COLGATE LUMINOUS WHITE -->
+		<div class="container slider0">
+			<div class="slider">
+			 	<div>
+			 		<img src="./img/pasta_4.png" class="art-1">
+			 		<h1 class="st">CREAM DENTAL<br>COLGATE LUMINOUS WHITE</h1>
+			 		<p class="stp">Dientes un tono más blanco en una semana.<br>Sus microcristales aceleradores de blanqueamiento<br>contienen ingredientes similares a los <br>usados por dentistas.</p>
+			 	</div>
+			  	<div>
+			  		<img src="./img/pasta_3.png" class="art-2">
+			  		<h1 class="st primero">CREAM DENTAL<br>COLGATE LUMINOUS WHITE<br>ADVANCED</h1>
+			 		<p class="stp primero">Dientes hasta 3 tonos más blancos.<br>Con los mismos ingredientes activos utilizados<br>por odontólogos, proporciona un blanqueamiento<br>avanzado para una sonrisa brillante.</p>
+			  	</div>
+			  	<div>
+			  		<img src="./img/pasta_2.png" class="art-3">
+			  		<h1 class="st segundo">CREAM DENTAL<br>LUMINOUS WHITE INSTANT</h1>
+			 		<p class="stp segundo">Nueva Colgate Luminous White Instant<br>con iluminadores ópticos, dientes blancos al instante.</p>
+			  	</div>
+			  	<div>
+			  		<img src="./img/enjuage.png" class="art-4">
+			  		<h1 class="st">ENJUAGUE BUCAL<br>COLGATE<br>LUMINOUS WHITE</h1>
+			 		<p class="stp tercero">Sonrisa brillante, boca fresca.<br>Ayuda a mantener el blanco natrural de los dientes<br>y refresca tu aliento.</p>
+			  	</div>
+			  	<div>
+			  		<img src="./img/cepillos.png" class="art-5">
+			  		<h1 class="st cuarto">CEPILLO DE DIENTES<br>COLGATE 360º</h1>
+			 		<p class="stp cuarto">Limpieza completa de boca. ¿Cómo funciona?<br>Limpia la superficie de los dientes, encías, lengua, mejillas y labios.</p>
+			 		<ol>
+			 			<li>Las copas blanqueadoras auidan a quitar<br>las manchas superficiales.</li>
+			 			<li>Las cerdas pulidoras quitan manchas superficiales y limpian<br>lugares de difícil alcance.</li>
+			 			<li>Los limpiadores de lengua y mejillas ayudan a quitar las bacterias<br>que causan mal aliento</li>
+			 		</ol>
+			  	</div>
 			</div>
-			<div class="text">
-				<img src="">
-				<h1 class="tittle">CREMA DENTAL<br>COLGATE LUMINOUS WHITE.<br> <span class="text">Dientes un tono más blanco en una semana.<br>Sus microcristales aceleradores de blanqueamiento<br>contiene ingredientes similares a los<br>usados por dentistas.</span></h1>
-				<img src="">
-			</div>
-		</div>	
+		</div>
+
 <!--  ++++++++++++  GENTE LUMINOUS -->
 		<div class="container Gente">
-			<div class="background-rojo">
-			</div>
 			<div class="text">
 				<div class="fondo">
 					<img src="./img/marco-1.png" class="foto1">
@@ -140,18 +171,19 @@
 					<p class="text3">El trozo de texto estándar de Lorem Ipsum usado desde el año 1500 es reproducido debajo para aquellos interesados.</p>
 				</div>
 				</div>
-					<h1 class="tittle">GENTE <br>LUMINOUS<br><span class="text">Personas que han decidido cambiar su sonrisa<br> en un instante.</span></h1>
-					<img src="./img/diente.png" class="diente">
+					<h1 class="tittle3">GENTE <br>LUMINOUS</h1>
+					<p class="contexto2">Personas que han decidido cambiar su sonrisa<br> en un instante.</p>
+					<img src="./img/diente.png" class="diente2">
 				</div>
 			</div>
-				<!--div class="footer">
-					<ul>
-						<li>Términos y condiciones</li>
-						<li>Aviso de privacidad</li>
-						<li>Contacto</li>
-					</ul>
-				</div>	
-			</div>
+		</div>
+		<div class="footer">
+			<ul class="ul">
+				<li class="li">TÉRMINOS Y CONDICIONES</li>
+				<li class="li"><a href="#" data-reveal-id="myModal">AVISO DE PRIVACIDAD</a></li>
+				<li class="li">CONTACTO</li>
+			</ul>
+			<p class="parrafo">CONSULTA REGULARMENTE A TU ODONTÓLOGO, SSA: 143300202D0281© 2014 Colgate-Palmolive Company. Todos los derechos reservados. © 2014 Colgate-Palmolive Company. Todos los derechos reservados.</p>
 		</div>
 <!--  ++++++++++++  MAGAZINE LUMINOUS >
 		<div class="container Magazine">
@@ -198,13 +230,24 @@
 				</ul>
 			</div>
 		<div>
+<!--  ++++++++++++  MODAL -->
+		<div class="modal">
+			<div id="myModal" class="reveal-modal" data-reveal>
+			  	<h2>AVISO DE PRIVACIDAD.</h2>
+			  	<p class="lead">Your couch.  It is mine.</p>
+			  	<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+			  	<a class="close-reveal-modal">&#215;</a>
+			</div>
+		</div>
+
 <!--  ++++++++++++  FOOTER>		
 		<div class="footer">
-			<ul>
-				<li>Términos y condiciones</li>
-				<li>Aviso de privacidad</li>
-				<li>Contacto</li>
+			<ul class="ul">
+				<li class="li">TÉRMINOS Y CONDICIONES</li>
+				<li class="li">AVISO DE PRIVACIDAD</li>
+				<li class="li">CONTACTO</li>
 			</ul>
-		</div>		
-	</body>
+			<p class="parrafo">CONSULTA REGULARMENTE A TU ODONTÓLOGO, SSA: 143300202D0281© 2014 Colgate-Palmolive Company. Todos los derechos reservados. © 2014 Colgate-Palmolive Company. Todos los derechos reservados.</p>
+		</div>
+
 </html>
