avances slider luminous

--- a/index.html
+++ b/index.html
@@ -210,26 +210,19 @@
 				</ul>
 			</div>	
 		</div>
-<!--  ++++++++++++  ARTÍCULO >
-		<div class="container Articulo">
-			<div class="row">
-				<div class="col-md-6">
-				</div>
-				<div class="col-md-6">
-					<h2>TÍTULO DE ARTÍCULO</h2>
-					<p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. </p>
-					<a href=""> <img src=""> </a>
-					<a href=""> <img src=""> </a>
-				</div>
+<!--  ++++++++++++  ARTÍCULO -->
+	<div class="container slider0">
+			<div class="slider">
+			 	<div>
+			 		<div class="marco">
+			 		</div>
+			 		<button class="close"></button>
+			 		<img src="./img/foto.png" class="art-fotoss">
+			 		<h1 class="st titul">TÍTULO DE ARTÍCULO</h1>
+			 		<p class="stp arti">Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. </p>
+			 	</div>
 			</div>
-			<div class="footer">
-				<ul>
-					<li>Términos y condiciones</li>
-					<li>Aviso de privacidad</li>
-					<li>Contacto</li>
-				</ul>
-			</div>
-		<div>
+		</div>
 <!--  ++++++++++++  MODAL -->
 		<div class="modal">
 			<div id="myModal" class="reveal-modal" data-reveal>
