--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="fonts/colgate.css">
 		<link rel="stylesheet" type="text/css" href="css/foundation.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -24,187 +25,100 @@
 			</ul>
 		</div>
 <!--  ++++++++++++  PAG. INICIO-->
-		<div class="container Inicio">
+		<div class="container Inicio" data-0="transform:translate(0,0%)" data-100p="transform:translate(0,0%);">
 			<!--div class="background-girl"></div-->
 			<div class="text">
 				<img src="./img/logo-colgate.png" class="logo-luminous">
 				<h1 class="tittle-1">DIENTES BLANCOS<br> AL <span>INSTANTE.</span></h1>
+				<!--transform:translate(0,100%)-->
 				<img src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br><span>Visita regularmente a tu odontólogo.</span></p>
 				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
 <!--  ++++++++++++  DECIDIR NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
-		<div class="container Lentes">
+		<div class="container Lentes" data-0="transform:translate(0,100%)" data-100p="transform:translate(0,0%);">
 			<!--div class="background-girl2"></div-->
 			<div class="text">
 				<img src="">
-				<h1>DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
-				<img src="./img/pasta.png" class="pasta">
+				<h1 data-80p="opacity:0" data-100p="opacity:1">DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
+				<img data-10p="transform:translate(0,-155%)" data-100p="transform:translate(0,0%)" src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
 				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
 <!--  ++++++++++++  ESCOGER NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
-		<div class="container Tacones">
+		<div class="container Tacones" data-100p="transform:translate(0,100%)" data-200p="transform:translate(0,0%);">
 			<!--div class="background-girl3"></div-->
 			<div class="text">
 				<img src="">
-				<h1>ESCOGER NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
-				<img src="./img/pasta.png" class="pasta">
+				<h1 data-180p="opacity:0" data-200p="opacity:1">ESCOGER NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
+				<img data-110p="transform:translate(0,-155%)" data-200p="transform:translate(0,0%)" src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
 				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
 <!--  ++++++++++++  CON ILUMINADORES ÓPTICOS -->
-		<div class="container Iluminadores">
+		<div class="container Iluminadores" data-200p="transform:translate(0,100%)" data-300p="transform:translate(0,0%);">
 			<div class="background-rojo">
-				<img src="./img/diente-con-relog.png" class="diente">
+				<img src="./img/diente-con-reloj.png" class="diente">
+				<img 
+				data-_sparkles-0="transform:translate(10%,0%);opacity:0;filter:blur(0px)" 
+				data-_sparkles-20p="transform:translate(-34%,12%);opacity:0.9;filter:blur(2px)"
+				data-_sparkles-80p="transform:translate(-116%,48%);opacity:0.9;filter:blur(0px)"
+				data-_sparkles-100p="transform:translate(-130%,60%);opacity:0" 
+				src="./img/sparkles.png" class="sparkles">
+				<img 
+				data-_sparkles-0="transform:translate(10%,0%);opacity:0;filter:blur(0px)" 
+				data-_sparkles-20p="transform:translate(-14%,12%);opacity:0.8;filter:blur(4px)"
+				data-_sparkles-80p="transform:translate(-86%,48%);opacity:0.8;filter:blur(0px)"
+				data-_sparkles-100p="transform:translate(-110%,60%);opacity:0" 
+				src="./img/sparkles.png" class="sparkles">
+				<img 
+				data-_sparkles-0="transform:translate(0%,0%);opacity:0" 
+				data-_sparkles-20p="transform:translate(-24%,12%);opacity:1"
+				data-_sparkles-80p="transform:translate(-96%,48%);opacity:1"
+				data-_sparkles-100p="transform:translate(-120%,60%);opacity:0" 
+				src="./img/sparkles.png" class="sparkles">
+				<p class="time" 
+				data-_sparkles-0="opacity:0"
+				data-_sparkles-10p="opacity:1"
+				data-_sparkles-40p="opacity:1"
+				data-_sparkles-50p="opacity:0"
+				>1 minuto</p>
+				<p class="time"
+				data-_sparkles-40p="opacity:0"
+				data-_sparkles-50p="opacity:1"
+				data-_sparkles-90p="opacity:1"
+				data-_sparkles-100p="opacity:0"
+				>2 minutos</p>
+				<p class="time" 
+				data-_sparkles-90p="opacity:0"
+				data-_sparkles-100p="opacity:1"
+				>3 minutos</p>
 				<p class="drama">DRAMATIZACIÓN</p>
-			</div>
-			<div class="text">
-				<img src="">
-				<h1 class="opticos">CON ILUMINADORES<br>ÓPTICOS.</h1>
-				<img src="./img/pasta.png" class="pasta">
-				<p class="leyenda">El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
-				<img src="./img/boton-flecha-abajo.png" class="boton">
-			</div>
-		</div>	
-<!--  ++++++++++++  CON ILUMINADORES ÓPTICOS DIENTES BLANCOS AL INSTANTE -->
-		<div class="container 3min redbg">
-			<div class="background-rojo">
-				<img src="./img/diente-con-relog-2.png" class="minutos">
-				<p class="drama2">DRAMATIZACIÓN</p>
 				<img src="./img/banner-abajo.png" class="banner">
 			</div>
 			<div class="text">
 				<img src="">
-				<h1 class="tittle">CON ILUMINADORES<br>ÓPTICOS<br>DIENTES BLANCOS<br>AL INSTANTE.</h1>
-				<img src="./img/pasta.png" class="pasta">
+				<h1 data-280p="opacity:0" data-300p="opacity:1" class="tittle">CON ILUMINADORES<br>ÓPTICOS</h1>
+				<h1 data-_sparkles-80p="opacity:0" data-_sparkles-100p="opacity:1" class="tittle sub">DIENTES BLANCOS<br>AL INSTANTE.</h1>
+				<img data-210p="transform:translate(0,-155%)" data-300p="transform:translate(0,0%)" src="./img/pasta.png" class="pasta">
 				<p class="leyenda">El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
 				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
-		</div>	
+		</div>
 <!--  ++++++++++++  DECIDIR NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
-		<div class="container Blusas">
-			<div class="background-girl4">
-			</div>
+		<!--div class="container"></div-->
+		<div class="container Blusas" data-_sparkles-150p="transform:translate(0,100%);" data-_sparkles-200p="transform:translate(0,0%);">
+			<!--<div class="background-girl4"></div>-->
 			<div class="text">
 				<img src="">
-				<h1>DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
-				<img src="./img/pasta.png" class="pasta">
+				<h1 data-_sparkles-190p="opacity:0" data-_sparkles-200p="opacity:1">DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
+				<img data-_sparkles-160p="transform:translate(0,-140%)" data-_sparkles-200p="transform:translate(0,0%)" src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
 				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>	
-<!--  ++++++++++++  LÍNEA COMPLETA, RESULTADOS INCREÍBLES. -->
-		<div class="container Articulos">
-			<div class="background-rojo">
-			</div>
-			<div class="text">
-				<img src="./img/productos.png" class="articulos">
-				<h1 class="tittle">LÍNEA COMPLETA,<br>RESULTADOS INCREÍBLES.<br> <span class="text">Con cepillo, enjuague y pasta de dientes juentos,<br>tu sonrisa brillará mucho más.</span></h1>
-				<img src="./img/pasta.png" class="pasta">
-				<p class="leyenda">El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
-				<img src="./img/boton-flecha-abajo.png" class="boton">
-			</div>
-		</div>
-<!--  ++++++++++++  CREMA DENTAL COLGATE LUMINOUS WHITE >
-		<div class="container Crema">
-			<div class="background-rojo">
-			</div>
-			<div class="text">
-				<img src="">
-				<h1 class="tittle">CREMA DENTAL<br>COLGATE LUMINOUS WHITE.<br> <span class="text">Dientes un tono más blanco en una semana.<br>Sus microcristales aceleradores de blanqueamiento<br>contiene ingredientes similares a los<br>usados por dentistas.</span></h1>
-				<img src="">
-			</div>
-		</div>	
-<!--  ++++++++++++  GENTE LUMINOUS -->
-		<div class="container Gente">
-			<div class="background-rojo">
-			</div>
-			<div class="text">
-				<div class="fondo">
-					<img src="./img/marco-1.png" class="foto1">
-					<p class="name1">Alejandra Ramírez</p>
-					<p class="text1">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.</p>
-				</div>
-				<div class="fondo-2">
-					<img src="./img/marco-2.png" class="foto2">
-					<p class="name2">Alejandra Ramírez</p>
-					<p class="text2">Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio. Tiene sus raices en una pieza cl´sica de la literatura del Latin, que data del año 45 antes de Cristo. </p>
-				</div>
-				<div class="fondo-3">
-					<img src="./img/marco-3.png" class="foto3">
-					<p class="name3">Alejandra Ramírez</p>
-					<p class="text3">El trozo de texto estándar de Lorem Ipsum usado desde el año 1500 es reproducido debajo para aquellos interesados. Las secciones 1.10.32 y 1.10.33 de "de Finibus Bonorum et Malorum" </p>
-				</div>
-				</div>
-					<h1 class="tittle-1">GENTE <br>LUMINOUS<br><span class="text">Personas que han decidido cambiar su sonrisa<br> en un instante.</span></h1>
-					<img src="">
-				</div>
-			</div>
-				<!--div class="footer">
-					<ul>
-						<li>Términos y condiciones</li>
-						<li>Aviso de privacidad</li>
-						<li>Contacto</li>
-					</ul>
-				</div>	
-			</div>
-		</div>
-<!--  ++++++++++++  MAGAZINE LUMINOUS >
-		<div class="container Magazine">
-			<div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-			</div>
-			<div class="text-tittle">
-				<h1 class="tittle-1">MAGAZINE LUMINOUS</h1>
-				<p>Descubre los lugares Luminous en estos artículos<br>que tenemos para ti.</p>
-			</div>
-			<div class="footer">
-				<ul>
-					<li>Términos y condiciones</li>
-					<li>Aviso de privacidad</li>
-					<li>Contacto</li>
-				</ul>
-			</div>	
-		</div>
-<!--  ++++++++++++  ARTÍCULO >
-		<div class="container Articulo">
-			<div class="row">
-				<div class="col-md-6">
-				</div>
-				<div class="col-md-6">
-					<h2>TÍTULO DE ARTÍCULO</h2>
-					<p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. </p>
-					<a href=""> <img src=""> </a>
-					<a href=""> <img src=""> </a>
-				</div>
-			</div>
-			<div class="footer">
-				<ul>
-					<li>Términos y condiciones</li>
-					<li>Aviso de privacidad</li>
-					<li>Contacto</li>
-				</ul>
-			</div>
-		<div>
-<!--  ++++++++++++  FOOTER>		
-		<div class="footer">
-			<ul>
-				<li>Términos y condiciones</li>
-				<li>Aviso de privacidad</li>
-				<li>Contacto</li>
-			</ul>
-		</div>		
 	</body>
 </html>
