--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
 		</div>
 <!--  ++++++++++++  DECIDIR NO ES INSTANTÁNEO, BLANQUEAR TU SONRISA SÍ -->
 		<!--div class="container"></div-->
-		<div class="container Blusas" data-_sparkles-150p="transform:translate(0,100%);" data-_sparkles-200p="transform:translate(0,0%);">
+		<div class="container Blusas" data-_sparkles-150p="transform:translate(0,100%);" data-_sparkles-250p="transform:translate(0,0%);">
 			<!--<div class="background-girl4"></div>-->
 			<div class="text">
 				<img src="">
-				<h1 data-_sparkles-190p="opacity:0" data-_sparkles-200p="opacity:1">DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
-				<img data-_sparkles-160p="transform:translate(0,-140%)" data-_sparkles-200p="transform:translate(0,0%)" src="./img/pasta.png" class="pasta">
+				<h1 data-_sparkles-230p="opacity:0" data-_sparkles-250p="opacity:1">DECIDIR NO ES<br> <span>INSTANTÁNEO,<br> BLANQUEAR<br></span>TU SONRISA SÍ.</h1>
+				<img data-_sparkles-160p="transform:translate(0,-155%)" data-_sparkles-250p="transform:translate(0,0%)" src="./img/pasta.png" class="pasta">
 				<p>El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
 				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>	
 <!--  ++++++++++++  LÍNEA COMPLETA, RESULTADOS INCREÍBLES. -->
-		<div class="container Articulos">
+		<div class="container Articulos" data-_sparkles-250p="transform:translate(0,100%);" data-_sparkles-350p="transform:translate(0,0%);">
 			<div class="background-rojo">
 			</div>
 			<div class="text">
@@ -132,51 +132,15 @@
 				<a href=""><img src="./img/pasta_3.png" class="articulos2"></a>
 				<a href=""><img src="./img/cepillos.png" class="articulos3"></a>
 				<a href=""><img src="./img/enjuage.png" class="articulos4"></a>
-				<h1 class="tittle">LÍNEA COMPLETA,<br>RESULTADOS INCREÍBLES.</h1>
-				<p class="contexto">Con cepillo, enjuague y pasta de dientes juentos,<br>tu sonrisa brillará mucho más.</p>
-				<img src="./img/pasta.png" class="pasta">
+				<h1 data-_sparkles-330p="opacity:0" data-_sparkles-350p="opacity:1" class="tittle">LÍNEA COMPLETA,<br>RESULTADOS INCREÍBLES.</h1>
+				<p data-_sparkles-330p="opacity:0" data-_sparkles-350p="opacity:1" class="contexto">Con cepillo, enjuague y pasta de dientes juntos,<br>tu sonrisa brillará mucho más.</p>
+				<img data-_sparkles-260p="transform:translate(0,-155%)" data-_sparkles-350p="transform:translate(0,0%)" src="./img/pasta.png" class="pasta">
 				<p class="leyenda">El efecto blanqueador instantáneo es temporal.<br>Visita regularmente a tu odontólogo.</p>
 				<img src="./img/boton-flecha-abajo.png" class="boton">
 			</div>
 		</div>
-<!--  ++++++++++++  CREMA DENTAL COLGATE LUMINOUS WHITE -->
-		<div class="container slider0">
-			<div class="slider">
-			 	<div>
-			 		<img src="./img/pasta_4.png" class="art-1">
-			 		<h1 class="st">CREAM DENTAL<br>COLGATE LUMINOUS WHITE</h1>
-			 		<p class="stp">Dientes un tono más blanco en una semana.<br>Sus microcristales aceleradores de blanqueamiento<br>contienen ingredientes similares a los <br>usados por dentistas.</p>
-			 	</div>
-			  	<div>
-			  		<img src="./img/pasta_3.png" class="art-2">
-			  		<h1 class="st primero">CREAM DENTAL<br>COLGATE LUMINOUS WHITE<br>ADVANCED</h1>
-			 		<p class="stp primero">Dientes hasta 3 tonos más blancos.<br>Con los mismos ingredientes activos utilizados<br>por odontólogos, proporciona un blanqueamiento<br>avanzado para una sonrisa brillante.</p>
-			  	</div>
-			  	<div>
-			  		<img src="./img/pasta_2.png" class="art-3">
-			  		<h1 class="st segundo">CREAM DENTAL<br>LUMINOUS WHITE INSTANT</h1>
-			 		<p class="stp segundo">Nueva Colgate Luminous White Instant<br>con iluminadores ópticos, dientes blancos al instante.</p>
-			  	</div>
-			  	<div>
-			  		<img src="./img/enjuage.png" class="art-4">
-			  		<h1 class="st">ENJUAGUE BUCAL<br>COLGATE<br>LUMINOUS WHITE</h1>
-			 		<p class="stp tercero">Sonrisa brillante, boca fresca.<br>Ayuda a mantener el blanco natrural de los dientes<br>y refresca tu aliento.</p>
-			  	</div>
-			  	<div>
-			  		<img src="./img/cepillos.png" class="art-5">
-			  		<h1 class="st cuarto">CEPILLO DE DIENTES<br>COLGATE 360º</h1>
-			 		<p class="stp cuarto">Limpieza completa de boca. ¿Cómo funciona?<br>Limpia la superficie de los dientes, encías, lengua, mejillas y labios.</p>
-			 		<ol>
-			 			<li>Las copas blanqueadoras auidan a quitar<br>las manchas superficiales.</li>
-			 			<li>Las cerdas pulidoras quitan manchas superficiales y limpian<br>lugares de difícil alcance.</li>
-			 			<li>Los limpiadores de lengua y mejillas ayudan a quitar las bacterias<br>que causan mal aliento</li>
-			 		</ol>
-			  	</div>
-			</div>
-		</div>
-
 <!--  ++++++++++++  GENTE LUMINOUS -->
-		<div class="container Gente">
+		<div class="container Gente" data-_sparkles-350p="transform:translate(0,100%);" data-_sparkles-450p="transform:translate(0,0%);">
 			<div class="text">
 				<div class="fondo">
 					<img src="./img/marco-1.png" class="foto1">
@@ -200,67 +164,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer">
+		<div class="footer" data-_sparkles-450p="transform:translate(0,100%);" data-_sparkles-460p="transform:translate(0,0%);">
 			<ul class="ul">
 				<li class="li">TÉRMINOS Y CONDICIONES</li>
 				<li class="li"><a href="#" data-reveal-id="myModal">AVISO DE PRIVACIDAD</a></li>
-				<li class="li">CONTACTO</li>
-			</ul>
-			<p class="parrafo">CONSULTA REGULARMENTE A TU ODONTÓLOGO, SSA: 143300202D0281© 2014 Colgate-Palmolive Company. Todos los derechos reservados. © 2014 Colgate-Palmolive Company. Todos los derechos reservados.</p>
-		</div>
-<!--  ++++++++++++  MAGAZINE LUMINOUS >
-		<div class="container Magazine">
-			<div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-			</div>
-			<div class="text-tittle">
-				<h1 class="tittle-1">MAGAZINE LUMINOUS</h1>
-				<p>Descubre los lugares Luminous en estos artículos<br>que tenemos para ti.</p>
-			</div>
-			<div class="footer">
-				<ul>
-					<li>Términos y condiciones</li>
-					<li>Aviso de privacidad</li>
-					<li>Contacto</li>
-				</ul>
-			</div>	
-		</div>
-<!--  ++++++++++++  ARTÍCULO -->
-	<div class="container slider0">
-			<div class="slider">
-			 	<div>
-			 		<div class="marco">
-			 		</div>
-			 		<button class="close"></button>
-			 		<img src="./img/foto.png" class="art-fotoss">
-			 		<h1 class="st titul">TÍTULO DE ARTÍCULO</h1>
-			 		<p class="stp arti">Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. </p>
-			 	</div>
-			</div>
-		</div>
-<!--  ++++++++++++  MODAL -->
-		<div class="modal">
-			<div id="myModal" class="reveal-modal" data-reveal>
-			  	<h2>AVISO DE PRIVACIDAD.</h2>
-			  	<p class="lead">Your couch.  It is mine.</p>
-			  	<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
-			  	<a class="close-reveal-modal">&#215;</a>
-			</div>
-		</div>
-
-<!--  ++++++++++++  FOOTER-->		
-		<div class="footer">
-			<ul class="ul">
-				<li class="li">TÉRMINOS Y CONDICIONES</li>
-				<li class="li">AVISO DE PRIVACIDAD</li>
 				<li class="li">CONTACTO</li>
 			</ul>
 			<p class="parrafo">CONSULTA REGULARMENTE A TU ODONTÓLOGO, SSA: 143300202D0281© 2014 Colgate-Palmolive Company. Todos los derechos reservados. © 2014 Colgate-Palmolive Company. Todos los derechos reservados.</p>
